fixed navbar on mobile

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -85,3 +85,10 @@
         z-index: 1;
     }
 }
+
+/* Small phones */
+@media screen and (max-width: 480px) {
+    .navbar {
+        margin-bottom: 40px;
+    }
+}
